kubernete/explorer/explorer-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer-api-server
  labels:
    app: explorer
spec:
  selector:
    matchLabels:
      app: explorer-api-server
  template:  
    metadata:
      labels:
        app: explorer-api-server
    spec:
      containers:
      - name: explorer-api-server
        image: gcr.io/atomic-land-223022/oneledger/explorer:latest
        command: ["/bin/bash", "-c"]
        args: 
          - >- 
            /usr/local/bin/explorer serve 
            --db explorer-server-sql-proxy/$DB_NAME?sslmode=disable  
            --dbpassword $DB_PASSWORD --dbuser $DB_USER 
            --tendermint tcp://fullnode-service:26604
            --sdk tcp://fullnode-service:26606 
        resources:
          requests:
            cpu: "400m"
            memory: "512Mi"
        ports:
        - name: explorer-server
          containerPort: 80
          protocol: TCP 
        readinessProbe:
          httpGet:
            path: /metrics
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 60
          failureThreshold: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /metrics
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 10
          timeoutSeconds: 5
        securityContext:
          runAsUser: 0
      volumes:
      - name: my-secrets-volume
        secret:
          secretName: cloudsql-cluster-credential
---
apiVersion: v1
kind: Service
metadata:
  name: explorer-service
  labels:
    run: explorer-service
    app: explorer
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"explorer-api-server-backendconfig","443":"explorer-api-server-backendconfig"}}'
spec:
  ports:
  - name: explorer-api-http
    port: 80
    targetPort: explorer-server
    protocol: TCP
  - name: explorer-api-https
    port: 443
    targetPort: explorer-server
    protocol: TCP
  type: NodePort
  selector:
    app: explorer-api-server
