kubernete/explorer/fullnode-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fullnode-deployment
  labels:
    app: fullnode
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fullnode
  template:  
    metadata:
      labels:
        app: fullnode
    spec:
      volumes:
      - name: fullnode-pv-claim
        persistentVolumeClaim:
          claimName: fullnode-pv-claim
      containers:
      - name: fullnode-container
        image: gcr.io/atomic-land-223022/oneledger/chronos:v0.10.0
        volumeMounts:
          - mountPath: "/home/node/go/data"
            name: fullnode-pv-claim
        ports:
          - name: sdk-port
            containerPort: 26606
            protocol: TCP
          - name: rpc-port
            containerPort: 26604
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fullnode-service
  labels:
    run: fullnode-service
spec:
  ports:
  - name: sdk-port
    port: 26606
    targetPort: 26606
    protocol: TCP
  - name: rpc-port
    port: 26604
    targetPort: 26604
    protocol: TCP  
  type: NodePort
  selector:
    app: fullnode
