kubernete/explorer/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-postgres
  template:  
    metadata:
      labels:
        app: explorer-postgres
    spec:
      volumes:
      - name: psql-pv-claim
        persistentVolumeClaim:
          claimName: psql-pv-claim
      containers:
      - name: postgres-database
        image: gcr.io/atomic-land-223022/oneledger/explorer_postgres:latest
        imagePullPolicy: "Always"
        ports: 
        - name: psql-port
          containerPort: 5432
          protocol: TCP 
        volumeMounts:
        - mountPath: /data
          name: psql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: psql-service
  labels:
    run: psql-service
    app: explorer
spec:
  ports:
  - name: psql-port
    port: 5432
    targetPort: psql-port
    protocol: TCP
  type: NodePort
  selector:
    app: explorer-postgres
